--- a/libs/jade/dev/search/search-no-results-advisernet.jade
+++ b/libs/jade/dev/search/search-no-results-advisernet.jade
@@ -18,11 +18,12 @@ block content
 		.col-12
 			.search-title No results for #[strong greivancess]
 			p It’s worth checking your spelling or trying more general words.
-			fieldset
-				.field-group.field-group--buttons
-					input#field(type="search" value="greivancess")
-					button.btn Search
-			p Get more precise search results when searching for a phrase by putting quotation marks / double inverted commas ("") around the phrase, e.g. a search for "maternity pay"
-	.flex-row
+			form
+				fieldset
+					.field-group.field-group--buttons
+						input#field(type="search" value="greivancess")
+						button.btn(type="submit") Search
+			p For more precise search results, try adding quotation marks around an exact phrase, e.g. “maternity pay”.
+	//-.flex-row
 		.col-12
 			#[a.blocklink(href="https://www.research.net/r/SS2P73R?p={{p}}&u={{u}}" target="_blank") Let us know if you had problems with your search]
