--- a/libs/jade/dev/search/results-advisernet-typo.jade
+++ b/libs/jade/dev/search/results-advisernet-typo.jade
@@ -1,7 +1,7 @@
 block settings
 	- var advisernet = true
 	- var sidebar = true
-	//- var title = "Search results for"
+	- var title = "Search"
 	- var dir = "../../"
 
 extends /jade/templates/template.jade
@@ -16,17 +16,29 @@ block sidebar
 	include /jade/dev/search/sidebar-search-advisernet.jade
 	
 block content
-	.flex-row
-		.col-12
-			h1.page-title.search Search
+	.articleContent
+		style.
+			@media (max-width: 600px) {
+				.field-group.field-group--buttons .btn {
+				        width: 40%;
+				        display: inline-block;
+				        margin-left: -40%;
+				        border-width: 2px;
+				        border-radius: 0;
+				        }
+			}
+		div
+			//-h1.page-title.search Search
 			//-.search-title Showing results for #[strong benefits]
 			//- .term-suggestion Search instead for #[a bnefits]
-			.search-results__input
+			.search-results__input(role="search")
+				label.screenreader Search
 				form
 					fieldset
 						.field-group.field-group--buttons
 							input#field(type="search", placeholder="Search term or document number", value="bnefits")
 							button.btn.search-button-icon(type="submit") Search
+						p Search for advice
 						.invalid An error was encountered. Please try searching again later.
 			h2.search-title Showing results for #[strong benefits]
 			p.search-spellcheck Search instead for #[a bnefits]
