--- a/libs/jade/dev/search/sidebar-search-advisernet.jade
+++ b/libs/jade/dev/search/sidebar-search-advisernet.jade
@@ -1,7 +1,7 @@
 // Sidebar for search pages
 
 .side-nav-beta.search-sidebar
-	.search-sidebar--filter
+	.search-sidebar--filter(role="search filter")
 		form
 			label(for="searchFilter") Show results for:
 			fieldset
@@ -10,6 +10,8 @@
 						option(value="0") Advice 
 						option(value="1") Research and campaigns
 						option(value="2") Everything
+			noscript
+				button(type="submit") Go
 
 	.search-sidebar--navigation
 		label Navigation tools
