--- a/libs/jade/dev/search/sidebar-search.jade
+++ b/libs/jade/dev/search/sidebar-search.jade
@@ -1,18 +1,20 @@
 // Sidebar for search pages
 
 .side-nav-beta.search-sidebar
-	.search-sidebar--filter
+	.search-sidebar--filter(role="search filter")
 		form
 			label(for="searchFilter") Show results for:
 			fieldset
 				.dropdown
 					select(id="searchFilter" onchange="this.form.submit()")
-						option(value="0" ) Advice 
+						option(value="0") Advice 
 						option(value="1") Research and campaigns
 						option(value="2") Everything
+			noscript
+				button(type="submit") Go
 
 	.search-sidebar--navigation
-		label Useful links
+		label Navigation tools
 		fieldset
 			ul
 				li
