dev:change: structure of search sidebars adjusted to match epi - removed containing div - also moved screenreader tag inside fieldset and wrapped form one level higher.

--- a/libs/styles/theme/search-results.less
+++ b/libs/styles/theme/search-results.less
@@ -16,6 +16,8 @@
     background-color: @white;
     margin-bottom: 1.5rem;
     padding: 1.4rem 1rem;
+    float: right;
+    //width: 100%;
 
     li ul a:not([href]),
     li ol a:not([href]) {
@@ -68,6 +70,8 @@
     //margin-bottom: 1.5rem;
     padding: 1.4rem 1rem 3rem;
     margin: 0 0 1.4rem;
+    float: right;
+    //width: 100%;
 }
 
 .search-results {
