dev:add: section nav wrap to search sidebar

--- a/libs/jade/dev/search/results-public.jade
+++ b/libs/jade/dev/search/results-public.jade
@@ -40,7 +40,7 @@ block content
 							button.btn.search-button-icon(type="submit") Search
 						p Search for advice
 						.invalid An error was encountered. Please try searching again later.
-			.search-title Showing results for #[strong Do I qualify for benefits in the UK]
+			.search-title Showing results for #[strong benefits]
 			.term-suggestion Search instead for #[a bnefits]
 			//h2.search-title Showing results for #[strong benefits]
 			//p.search-spellcheck Search instead for #[a bnefits]
