--- a/libs/styles/theme/search-results.less
+++ b/libs/styles/theme/search-results.less
@@ -16,7 +16,7 @@
     background-color: @white;
     margin-bottom: 1.5rem;
     padding: 1.4rem 1rem;
-    float: right;
+    //float: right;
     //width: 100%;
 
     li ul a:not([href]),
@@ -70,7 +70,7 @@
     //margin-bottom: 1.5rem;
     padding: 1.4rem 1rem 3rem;
     margin: 0 0 1.4rem;
-    float: right;
+    //float: right;
     //width: 100%;
 }
 
