dev:change: moved search filter to separate div outside nav and added page-specific nav styling

--- a/libs/jade/dev/search/results-advisernet-typo.jade
+++ b/libs/jade/dev/search/results-advisernet-typo.jade
@@ -27,6 +27,11 @@ block content
 				        border-radius: 0;
 				        }
 			}
+			.section-nav {
+				order: 0;
+				border: none;
+			}
+
 		div
 			//-h1.page-title.search Search
 			//-.search-title Showing results for #[strong benefits]
