--- a/libs/jade/dev/search/results-public.jade
+++ b/libs/jade/dev/search/results-public.jade
@@ -29,6 +29,11 @@ block content
 				        }
 			}
 
+			.section-nav {
+				order: 0;
+				border: none;
+			}
+
 		div
 			//-h1.page-title.search Search
 			form
