--- a/libs/styles/theme/search-results.less
+++ b/libs/styles/theme/search-results.less
@@ -70,8 +70,11 @@
     //margin-bottom: 1.5rem;
     padding: 1.4rem 1rem 3rem;
     margin: 0 0 1.4rem;
-    //float: right;
-    //width: 100%;
+    float: right;
+    width: @width-span-4;
+    @media screen and (max-width: @breakpoint-content) {
+        width: @width-span-12;
+    }
 }
 
 .search-results {
