--- a/libs/jade/dev/search/results-advisernet-typo.jade
+++ b/libs/jade/dev/search/results-advisernet-typo.jade
@@ -18,18 +18,26 @@ block sidebar
 block content
 	.articleContent
 		style.
-			@media (max-width: 600px) {
-				.field-group.field-group--buttons .btn {
-				        width: 40%;
-				        display: inline-block;
-				        margin-left: -40%;
-				        border-width: 2px;
-				        border-radius: 0;
-				        }
+			.field-group--buttons input:first-of-type {
+				width: 70%;
 			}
-			.section-nav {
-				order: 0;
-				border: none;
+			.field-group input {
+				width: 30%;
+			}
+			@media (max-width: 750px) {
+				.field-group.field-group--buttons .btn {
+			        width: 40%;
+			        display: inline-block;
+			        margin-left: -40%;
+			        border-width: 2px;
+			        border-radius: 0;
+				}
+				.field-group--buttons input:first-of-type {
+					width: 90%;
+				}
+				.section-nav {
+					order: 1;
+				}
 			}
 
 		div
@@ -42,7 +50,7 @@ block content
 						.field-group.field-group--buttons
 							label.screenreader Search
 							input#field(type="search", placeholder="Search term or document number", value="bnefits")
-							button.btn.search-button-icon(type="submit") Search
+							button.btn.search-button-icon(type="submit" value="Search") Search
 						p Search for advice
 						.invalid An error was encountered. Please try searching again later.
 			h2.search-title Showing results for #[strong benefits]
