--- a/libs/styles/modules/blocklink.less
+++ b/libs/styles/modules/blocklink.less
@@ -6,13 +6,15 @@
 .blockLinks {
     margin: @box-spacing-vertical 0;
     padding: @box-spacing-vertical;
-    background-color: @aqua-light;
+    background-color: lighten(@link-color, 75%);
     color: @heritage-blue;
-    border: 1px solid @aqua;
+    border: 1px solid lighten(@link-color, 70%);
     font-size: @font-size-base;
     font-weight: @font-weight-bolder;
     display: block;
-    .btn-icon(@i-right,@color:@heritage-blue);
+    .btn-icon(@i-right,@color:@link-color);
+    border-radius: 2px;
+    text-decoration: underline;
 
     h1, h2, h3, h4, h5, h6, p {
         text-decoration: none;
@@ -22,35 +24,40 @@
         margin: 0;
     }
 
-    &:hover,
-    &:focus,
-    &:active {
-        background-color: darken(@aqua-light, 10%);
-        border: 1px solid @aqua;
-    }
-
-    &:visited {
-        border: 1px solid @aqua;
-    }
-
     // Changing the blocklink icon
     &.i-doc-image {
-        .btn-icon(@i-doc-image,@color:@heritage-blue);
+        .btn-icon(@i-doc-image,@color:@link-color);
     }
 
     &.i-search {
-        .btn-icon(@i-search,@color:@heritage-blue);
+        .btn-icon(@i-search,@color:@link-color);
     }
 
     // Changing the blocklink icon
     &.blocklinks--back {
-        .btn-icon(@i-left,@color:@heritage-blue);
+        .btn-icon(@i-left,@color:@link-color);
         text-align: left;
         padding-left: 2.5em;
         &:after {
             left: 1rem;
             text-align: left;
         }
+    }
+
+    &:visited {
+        border: 1px solid lighten(@link-color, 70%);
+        color: @link-visited-color;
+        &:after {
+            color: @link-visited-color;
+        }
+    }
+
+    &:hover,
+    &:focus,
+    &:active {
+        background-color: lighten(@link-color, 70%);
+        border: 1px solid lighten(@link-color, 70%);
+        text-decoration: underline;
     }
 
 }
