dev:change: tidied search folder, removed grey border on sidebar items, reworked results-adviser, created witness-referral-form folder

--- a/libs/jade/dev/search/results-adviser.jade
+++ b/libs/jade/dev/search/results-adviser.jade
@@ -22,12 +22,12 @@ block content
 			ul.search-results
 
 				li
-					.heading
+					h3
 						a Benefits
 					.description These pages give you information on #[strong benefits] and tax credits if you are working or unemployed, sick or disabled, a parent, a young person, an older person or a veteran.
 					ul.section
 						li #[a Benefits]
-					//- .adviser-categories
+					.adviser-categories
 						ul(style="margin:0")
 							li #[a Benefits fact sheets]
 							li #[a Universal Credit]
@@ -35,22 +35,23 @@ block content
 							li #[a Making welfare work locally]
 
 				li
-					.heading
+					h3
 						a Sick or disabled people and carers
 					.description If you're sick or disabled, you may be able to claim #[strong benefits] and tax credits.
 					ul.section
 						li #[a Benefits]
 
 				li
-					.heading
-						a Employment and Support Allowance (ESA)
-					.description Information on how to claim Employment and Support Allowance including eligibility, filling in the ESA1 and ESA50 forms and challenging an ESA decision.
-					ul.section
-						li #[a Benefits]
-						li #[a Sick or disabled people and carers]
+					.adviser-result
+						h3
+							a Employment and Support Allowance (ESA)
+						.description Information on how to claim Employment and Support Allowance including eligibility, filling in the ESA1 and ESA50 forms and challenging an ESA decision.
+						ul.section
+							li #[a Benefits]
+							li #[a Sick or disabled people and carers]
 
 				li
-					.heading
+					h3
 						a Contractual sick pay
 					.description If an employer has their own sick pay scheme it should be included in your client’s employment contract.
 					ul.section
@@ -58,7 +59,7 @@ block content
 						li #[a Sick pay]
 
 				li
-					.heading
+					h3
 						a Benefits for families and children
 					.description #[strong Benefits] for pregnant women and parents, including maternity allowance, maternity grants, child benefit and child trust fund.
 					ul.section
