dev:add: witness referral folder and mockups

--- a/libs/jade/dev/witness-referral-form/wrf-3-self.jade
+++ b/libs/jade/dev/witness-referral-form/wrf-3-self.jade
@@ -25,5 +25,5 @@ block content
                 input(id="last-name" type="text")
             
 
-            a.btn.left-button-icon(href="wrf-step-2.html") No
-            a.btn.right-button-icon(href="wrf-step-4.html") Yes
+            a.btn.left-button-icon(href="wrf-2-self.html") No
+            a.btn.right-button-icon(href="wrf-4-self.html") Yes
