--- a/libs/jade/dev/search/search-no-results-advisernet.jade
+++ b/libs/jade/dev/search/search-no-results-advisernet.jade
@@ -22,7 +22,7 @@ block content
 					.field-group.field-group--buttons
 						input#field(type="search" value="greivancess")
 						button.btn(type="submit") Search
-			.search-title No results for #[strong greivancess]
+			.search-title-beta No results for #[strong greivancess]
 			p It’s worth checking your spelling or trying more general words.
 			p For more precise search results, try adding quotation marks around an exact phrase, e.g. “maternity pay”.
 	//-.flex-row
