--- a/libs/styles/theme/search-results.less
+++ b/libs/styles/theme/search-results.less
@@ -65,11 +65,11 @@
 
 .search-sidebar--filter {
     .well;
-    //border-top: 6px @gray-6 solid;
+    border-top: 1px @gray-6 solid;
     background-color: @white;
     //margin-bottom: 1.5rem;
-    padding: 1.4rem 1rem 3rem;
-    margin: 0 0 1.4rem;
+    padding: 1.4rem 1rem 1rem;
+    margin: 0;
     float: left;
     width: @width-span-4;
     @media screen and (max-width: @breakpoint-content) {
@@ -204,7 +204,7 @@
     color: @heritage-blue;
 }
 
-.search-title {
+.search-title-beta {
     font-size: @font-size-medium;
     font-weight: @font-weight-base;
     margin-top: -0.4rem;
@@ -215,8 +215,10 @@
     }
 }
 
-.search-spellcheck {
+.search-spellcheck-beta {
     margin-bottom: 1.6em;
+    background-color: #fff;
+    border: 0;
 }
 
 .search-page-input {
