--- a/libs/jade/dev/search/results-public.jade
+++ b/libs/jade/dev/search/results-public.jade
@@ -52,7 +52,7 @@ block content
 							button.btn.search-button-icon(type="submit" value="Search") Search
 						p Search for advice
 						.invalid An error was encountered. Please try searching again later.
-			.search-title Showing results for #[strong benefits]
+			.search-title-beta Showing results for #[strong benefits]
 			.term-suggestion Search instead for #[a bnefits]
 			//h2.search-title Showing results for #[strong benefits]
 			//p.search-spellcheck Search instead for #[a bnefits]
