dev:add: beta styles for search title and spellcheck

--- a/libs/styles/theme/search-results.less
+++ b/libs/styles/theme/search-results.less
@@ -209,7 +209,7 @@
     font-weight: @font-weight-base;
     margin-top: -0.4rem;
     margin-bottom: 0.6rem;
-    color: @gray-0;
+    color: @gray-0!important;
     strong {
         font-weight: @font-weight-bold;
     }
@@ -217,8 +217,8 @@
 
 .search-spellcheck-beta {
     margin-bottom: 1.6em;
-    background-color: #fff;
-    border: 0;
+    background-color: transparent!important;
+    border: 0!important;
 }
 
 .search-page-input {
