--- a/libs/jade/dev/witness-referral-form/wrf-2-org.jade
+++ b/libs/jade/dev/witness-referral-form/wrf-2-org.jade
@@ -18,5 +18,5 @@ block content
         div
             p Please confirm that you’re happy with the #[a(href="#") terms and conditions], including that the Witness Service can store the information you give. They’ll only share it with your permission.
 
-            a.btn.left-button-icon(href="wrf-1-self.html") No
-            a.btn.right-button-icon(href="wrf-3-self.html") Yes
+            a.btn.left-button-icon(href="wrf-1-org.html") No
+            a.btn.right-button-icon(href="wrf-3-org.html") Yes
