--- a/libs/jade/dev/witness-referral-form/wrf-4.jade
+++ b/libs/jade/dev/witness-referral-form/wrf-4.jade
@@ -95,5 +95,5 @@ block content
                 span.form-hint e.g. the witness uses text relay
                 textarea(id="comm-need-details")
 
-            a.btn.left-button-icon(href="wrf-3-self.html") Back
-            a.btn.right-button-icon(href="wrf-5-self.html") Next
+            a.btn.left-button-icon(href="wrf-3-self.html") No
+            a.btn.right-button-icon(href="wrf-5-self.html") Yes
