--- a/libs/jade/dev/witness-referral-form/wrf-5-org.jade
+++ b/libs/jade/dev/witness-referral-form/wrf-5-org.jade
@@ -52,5 +52,5 @@ block content
                         option I don’t know
             
 
-            a.btn.left-button-icon(href="wrf-2-self.html") Back
-            a.btn.right-button-icon(href="wrf-4-self.html") Next
+            a.btn.left-button-icon(href="wrf-4b-org.html") Back
+            a.btn.right-button-icon(href="wrf-6-org.html") Next
