--- a/libs/jade/dev/witness-referral-form/wrf-6-org.jade
+++ b/libs/jade/dev/witness-referral-form/wrf-6-org.jade
@@ -44,8 +44,8 @@ block script
 block content
     .articleContent
         div
-            h2 Your contact details
-            p Choose a safe way for the Witness Service to get in touch.
+            h2 Witness’s contact details
+            p What’s the safest way to contact the witness?
             p If it’s safe to call, one of the best ways for the Witness Service to give support is over the phone. You’ll be called between 11am and 7pm.
             fieldset.conditional
                 legend(for="contact-methods")
@@ -95,5 +95,5 @@ block content
                 span.form-hint e.g. the witness uses text relay
                 textarea(id="comm-need-details")
 
-            a.btn.left-button-icon(href="wrf-3-self.html") Back
-            a.btn.right-button-icon(href="wrf-5-self.html") Next
+            a.btn.left-button-icon(href="wrf-5-org.html") Back
+            a.btn.right-button-icon(href="wrf-7-org.html") Next
