dev:change: minor change to .advisernet style for main container

--- a/libs/styles/theme/search-results.less
+++ b/libs/styles/theme/search-results.less
@@ -1,11 +1,11 @@
 /**
  * SEARCH RESULTS
  *
- * Styling for the results in the Search results page.
+ * Styling for the results on the Search page.
  *
  */
 
- .main-content .search-sidebar {
+.main-content .search-sidebar {
     order: 0;
     border-width: 0px;
 }
