dev:change: advisernet bg colour class amend - .advisernet-bg -  & template ammended accordingly

--- a/libs/styles/modules/share-bar.less
+++ b/libs/styles/modules/share-bar.less
@@ -97,7 +97,7 @@ html[data-useragent*='Mobi'] .a-social-whatsapp {
     position: relative;
     background-color: @white;
 
-    & .advisernet {
+    &.advisernet-bg {
         background-color: #F2F6F9;
     }
 }
