--- a/libs/jade/templates/template.jade
+++ b/libs/jade/templates/template.jade
@@ -221,8 +221,7 @@ include partials/header
 					a#repo(href="https://github.com/citizensadvice/cab-ui", style="border: none;") v3.0.0
 
 		if advisernet
-			.main-container
-				.advisernet
+			.main-container.advisernet-bg
 					nav.main-breadcrumb
 						block breadcrumbs
 
@@ -250,7 +249,7 @@ include partials/header
 									span.title__title #{title}
 							block content
 
-		else 
+		else
 			.main-container
 				nav.main-breadcrumb
 					block breadcrumbs
