dev:change reverted to advisernet class to colour background as this is applied to body tag on live site

--- a/libs/jade/templates/template.jade
+++ b/libs/jade/templates/template.jade
@@ -221,7 +221,7 @@ include partials/header
 					a#repo(href="https://github.com/citizensadvice/cab-ui", style="border: none;") v3.0.0
 
 		if advisernet
-			.main-container.advisernet-bg
+			.advisernet.main-container
 					nav.main-breadcrumb
 						block breadcrumbs
 
