--- a/libs/styles/modules/share-bar.less
+++ b/libs/styles/modules/share-bar.less
@@ -97,7 +97,7 @@ html[data-useragent*='Mobi'] .a-social-whatsapp {
     position: relative;
     background-color: @white;
 
-    &.advisernet-bg {
+    .advisernet & {
         background-color: #F2F6F9;
     }
 }
